# netlinkTray

./: .gitignore  README.md  netlink-tray.desktop  netlink_tray.py  pyproject.toml
netlink_tray/: __init__.py  cli.py  config.py  core.py  ui.py
