[project]
name = "netlink-tray"
version = "0.1.0"
description = "TCP/UDP port monitor using Netlink INET_DIAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.0.0",
]

[project.scripts]
netlink-tray = "netlink_tray.cli:main"

[tool.setuptools]
packages = ["netlink_tray"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
